--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ app variables
   --number-key-color: #696969;
   --number-key-color-hover: #3f3f3f;
   --submit-key-color: #d18800;
-  --submit-key-color-hover: #5591ff;
+  --submit-key-color-hover: #fcc0cb;
 
   /* font */
   --main-font: 'Orbitron', sans-serif;
